@@ -1,6 +1,7 @@
 - Integrate LogicalQueryParser, supporting full logical search, or simplified searches with 'all keywords' and 'any keyword' operators
 - Display unauthorized column in form as show action, so show_ui or show override is used if exists
 - Display unauthorized subform with show_ui as show action, to display readonly subform tables
+- Add subform_includes to column, and preload_for_form method to preload associations on edit action, speed up on big forms with long subforms or many nested subforms
 
 = 4.1.1 (not released yet)
 - Load dartsass-sprockets, so it isn't required in the Gemfile
